# nori-cli

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  NOTICE  PLAN-nori-config-redesign.md  PLAN.md  README.md  docs.md  flake.nix  nori-releases.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: CLAUDE.md  settings.json
.github/: dependabot.yaml
assets/: SCREENSHOT_PLACEHOLDER.md
codex-cli/: package-lock.json  package.json
codex-rs/: Cargo.toml  PLAN.md  default.nix  deny.toml  docs.md  justfile
codex-rs/acp/: Cargo.toml  DESIGN_DECISIONS.md  DESIGN_SUMMARY.md  HANDOFF.md  PLAN.md  docs.md
codex-rs/acp/src/: acp_client.rs  agent.rs  backend.rs  client.rs  connection.rs  hooks.rs  lib.rs  protocol.rs  registry.rs  session.rs  session_parser.rs  tracing_setup.rs  transcript_discovery.rs  translator.rs  transport.rs  undo.rs
codex-rs/acp/src/backend/: event_translation.rs  hooks.rs  mod.rs  session.rs  spawn_and_relay.rs  submit_and_ops.rs  tests.rs  tool_display.rs  transcript.rs  user_input.rs
codex-rs/acp/src/backend/tests/: mod.rs  part1.rs  part2.rs  part3.rs  part4.rs
codex-rs/acp/src/config/: loader.rs  mod.rs  types.rs
codex-rs/acp/src/config/types/: mod.rs  tests.rs
codex-rs/acp/src/connection/: mod.rs  public_api.rs  worker.rs
codex-rs/acp/src/transcript/: loader.rs  recorder.rs  tests.rs  types.rs
codex-rs/acp/tests/: integration.rs  session_parser_test.rs  thin_slice.rs  tracing_test.rs  undo_test.rs
codex-rs/acp/tests/fixtures/: session-gemini.json
docs/: release_management.md
scripts/: create_nori_release  (+2 more)
(+340 files in other folders)
