[package]
name = "codex-acp"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
agent-client-protocol = "0.7"
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
which = { workspace = true }
